--- a/halogen-frontend/styles/Header.module.css
+++ b/halogen-frontend/styles/Header.module.css
@@ -21,8 +21,10 @@
     padding: 20px 20px;
     border-right: 1px solid #f4f4f4;
     text-decoration: none;
+    text-align: center;
   }
   
+
   .header li a:hover,
   .header .menuBtn:hover {
     background-color: #f4f4f4;
@@ -47,7 +49,6 @@
   /* menu icon */
   
   .header .menuIcon {
-      color:green;
     cursor: pointer;
     display: inline-block;
     float: right;
@@ -116,9 +117,11 @@
   @media (min-width: 48em) {
     .header li {
       float: left;
+      padding: 20px 20px;
     }
     .header li a {
-      padding: 20px 30px;
+      /* border: 2px solid springgreen; */
+      padding: 0.6rem;
     }
     .header .menu {
       clear: none;
